# TeleTok

./: .env.template  CONTRIBUTING.md  Dockerfile  README.md  compose.signtok.yaml  compose.yaml  pyproject.toml
.github/workflows/: pr-checks.yaml
app/: bot.py  decorators.py  errors.py  main.py  settings.py  utils.py
app/tiktok/: api.py  client.py  data.py  source.py
