[project]
name = "teletok"
version = "5.1.0"
description = "Telegram bot that will download a video or photos by a TikTok url"
authors = [{ name = "Igor Popov", email = "lentrog@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "httpx==0.27.0",
    "aiogram==3.6.0",
    "beautifulsoup4==4.12.3",
]

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "ruff~=0.4.6",
    "mypy~=1.10.0",
]

[tool.black]
line-length = 100


[tool.mypy]
mypy_path = ["app"]
follow_imports = "silent"
strict = true
disallow_subclassing_any = false
disallow_any_generics = false
ignore_missing_imports = true


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]
lint.ignore = ["D", "S311", "ANN10", "RUF001", "RUF012", "FIX", "TD002", "TD003"]
lint.select = ["ALL"]


